[package]
name = "cache_api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.42"
log = "0.4"
env_logger = "0.9"
http = "1.0.0"
once_cell = "1"
prometheus = "0.13"
bytes = "1.0"
serde = "1.0.209"
serde_json = "1.0.127"
pingora = "0.3.0"
pingora-timeout = "0.3.0"
pingora-memory-cache = "0.3.0"